namespace TeaShoppe.Domain;

/// <summary>
/// Enum class to enforce sort direction as either ascending or descending.
/// </summary>
public enum SortDirection
{
    Ascending,
    Descending
}