@startuml
'===========================
'Plant UML Configuration
'============================
' UML Diagram layout
skinparam linetype ortho
skinparam ranksep 40
skinparam nodesep 35
left to right direction

' UML Dark mode config 
skinparam backgroundColor #1e1e1e
skinparam classBackgroundColor #2d2d2d
skinparam classBorderColor #bbbbbb
skinparam classFontColor #ffffff
skinparam classAttributeFontColor #ffffff
skinparam classMethodFontColor #ffffff
skinparam ArrowColor #cccccc
skinparam shadowing false

' Style the stereotype named "record"
skinparam class<<record>> {
    FontColor #ffffff
    BorderColor #88c0ff
}
skinparam classStereotypeFontColor #ffffff
skinparam classStereotypeFontStyle bold

' Package font color
skinparam packageFontColor #ffffff
skinparam packageBorderColor #bbbbbb
skinparam packageBackgroundColor #262626
skinparam packageTitleFontStyle bold


'=======================================
'Draft Classes & Interfaces - Domain
'=======================================

'I. Draft Tea + Repository Interface + Classes
'=======================================
package Inventory{
class TeaItem <<record>> {
- name: string {readOnly}
- basePrice: decimal {readOnly}
- starRating: int {readOnly}
+ Getters()
}

class StarRating{
- rating
+ StarRating(rating: int): void
}

class TeaCatalog{
- items: IReadOnlyList<RepositoryItem>
}

class RepositoryItem{
- shopItem: TeaItem
- itemID: int
- quantity: int
- retailPrice: decimal
- inStock: bool
+ DecrementStock(): void
+ IncrementStock(): void
+ IsInStock(): bool
+ SetPrice(decimal: price): void
}

interface IRepository{
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaRepository {
- repositoryItems: List<RepositoryItem>
+ RemoveItem(int: itemID): void
+ AddItem(item: RepositoryItem): void
+ GetInventory(): IReadOnly List<RepositoryItem>
}
}

'II. Draft Tea Decorator Interface + Classes
'======================================
package Decorators{
abstract class InventoryQuery {
- inner: IRepository
+ InventoryQuery(inner: IRepository)
+ GetInventory(): IReadOnly List<RepositoryItem> 
}

class TeaByName{
- name: string
+ TeaByName(inner: IRepository, name: string)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByAvailability{
- inStock: bool
+ TeaByAvailability(inner: IRepository, bool: IsInStock)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByQuantity{
- quantity: int
+ TeaByQuantity(inner: IRepository, int: quantity)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByPrice{
- price: decimal
+ TeaByPrice(inner: IRepository, decimal: price)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

class TeaByRating {
- rating: StarRating
+ TeaByRating(inner: IRepository, int: rating)
+ GetInventory(): IReadOnly List<RepositoryItem>
}
 
class SortTeas{
- priceDirection: SortDirection
- ratingDirection: SortDirection
+ SortByPrice(inner: IRepository, SortDirection: price, SortDirection: rating)
+ GetInventory(): IReadOnly List<RepositoryItem>
}

enum SortDirection{
- Descending
- Ascending
}
}

enum PrimarySort{
- Rating
- Price
}
 
'III. Draft Payment Strategy Interface + Classes
'======================================
package Payment{
class OrderReceipt{
+ OrderReceipt(order: Order)
}

class Order{
- order: List<RepositoryItem> 
+ OrderAmount(list: List<RequestedItem>): decimal
+ AddItem(item: RequestedItem): void
+ RemoveItem(int: RequestedItemID): void
}

interface IPaymentStrategy{
Pay(amount: decimal): void
}

class CreditCard{
Pay(amount: decimal): void
}

class ApplePay{
Pay(amount: decimal): void
}

class CryptoCurrency{
Pay(amount: decimal): void
}

class PaymentProcessor{
- strategy: IPaymentStrategy
- order: Order
+ SetStrategy(strategy: IPaymentStrategy): void
+ ProcessPayment(): void
}
}
'IV. Draft Classes - UI
'=======================================
package UI{
class TeaShoppeFacade{
- requestedItem: RequestedItem
- paymentProcessor: PaymentProcessor
- teaShopRepository: IRepository
+ PerformQuery(item: RequestedItem): IRepository
+ DisplayQuery(): void
+ ShoppeOpen(): void 
}

class RequestedItem{
- name: string
- rating: int
- price: decimal
- iD: int
- isPricePrimary: bool
- isRatingPrimary: bool
- priceDirection: SortDirection
- ratingDirection: SortDirection
+ Getters()
}
}

'=======================================
'Draft Relationships
'=======================================
IRepository <|.. TeaRepository
RepositoryItem <-- TeaRepository
TeaItem <-- RepositoryItem
IRepository <|.. InventoryQuery
IRepository <-- InventoryQuery
InventoryQuery <|.. TeaByAvailability
InventoryQuery <|.. TeaByQuantity
InventoryQuery <|.. TeaByPrice
InventoryQuery <|.. TeaByRating
InventoryQuery <|.. TeaByName
InventoryQuery <|.. SortTeas
IPaymentStrategy <|.. CreditCard
IPaymentStrategy <|.. ApplePay
IPaymentStrategy <|.. CryptoCurrency
IPaymentStrategy <-- PaymentProcessor
Order <-- PaymentProcessor
RequestedItem <-- TeaShoppeFacade
PaymentProcessor <-- TeaShopppeFacade
IRepository <-- TeaShoppeFacade

' Hidden Links to Force Clean UML Rendering
TeaRepository -[hidden]-> InventoryQuery
InventoryQuery -[hidden]-> PaymentProcessor

@enduml